--- a/css/styles.css
+++ b/css/styles.css
@@ -1,25 +1,9 @@
-body {
-  text-align: center;
-}
-
-.header {
-  margin: 10px;
-  border: solid 2px;
-  border-radius: 10px;
-  padding: 10px;
-  padding-bottom: 30px;
+#content {
+  margin: 5px;
+  border-left: solid 2px;
+  padding-left: 30px
 }
 
 #step-2 {
   display: none;
-}
-
-ul {
-  display: block;
-  text-align:center;
-  list-style-type: none;
-}
-
-ul li {
-  font-size: 18px;
 }
